# Phase-II-TODO-Full-Stack-Web-Application_backend

./: .dockerignore  .gitignore  Dockerfile  auth.py  db.py  jwt_utils.py  main.py  migrate.py  migrate_tasks.py  models.py  pyproject.toml  requirements.txt  test_db.py  todo_app.db
.github/workflows/: deploy.yml
alembic/versions/: 001_add_conversation_message_tables.py
api/: index.py
middleware/: jwt_auth.py
routes/: ai_assistant.py  auth.py  tasks.py
src/: main.py
src/agents/: todo_agent.py
src/api/: auth.py  chat_api.py  todos.py
src/core/: security.py
src/models/: conversation.py  message.py  todo.py  user.py
src/services/: conversation_service.py  mcp_server.py  message_service.py  todo_service.py
src/tools/: task_tools.py
tests/: test_isolation.py
